# medtermex

./: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug-report.yaml  doc-request.yaml  feature-request.yaml  task.yaml
docs/models/: gliner.md  ollama.md  unsloth.md
notebooks/: 01-erikcalcina-benchmark.ipynb
projects/emc-dataset/: evaluate_labels.py
projects/fewshot-prompting/: affected_hand_extraction.py  complications_from_injections_extraction.py  operation_extraction.py  treated_hand_extraction.py
projects/gliner/: requirements.txt  setup.py
projects/gliner/scripts/: train_model.py
projects/gliner/scripts/pubmed/: 01_format_raw_to_json.py  02_format_json_to_gliner.py
projects/llama/: setup.py
projects/llama/scripts/: extraction.py  llm-general-training.py
projects/llama/src/utils/: prompts.json  prompts.py
scripts/: guidance_test.py  setup_env.sh  test.py  test_model.py  train_test_dataset.py  training_shuffled.py
scripts/models/: eval_model_ollama.sh  train_eval_model_gliner.sh  train_eval_model_unsloth.sh
slurm/: train_eval_model_gliner.sh  train_eval_model_unsloth.sh
src/core/metrics/: ner_metrics.py
src/models/: generate.py  guidance_generate.py  input_prompts.py
src/pipelines/: regex_label_validate_gliner.py  vllm_label_validate.py
src/training/: evaluate_gliner.py  evaluate_ollama.py  evaluate_unsloth.py  train_gliner.py  train_unsloth.py
