[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "medtermex"
version = "0.2.0"
description = "A project for training and evaluating medical term extraction models"
requires-python = ">=3.10"
authors = [
    {name = "Erik Novak", email = "erik.novak@ijs.si"},
    {name = "Erik Calcina", email = "erik.calcina@ijs.si"},
]
maintainers = [
    {name = "Erik Novak", email = "erik.novak@ijs.si"}
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = [
    "python",
    "machine learning",
    "natural language processing"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "spacy",
    "torch",
    "transformers",
    "accelerate",
    "datasets",
    "nltk",
    "pydantic",
    "python-dotenv",
    "tqdm",
    "marimo[recommended]",
    "ipywidgets",
    "ipython",
]

[project.urls]
"Homepage" = "https://github.com/E3-JSI/medtermex"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.optional-dependencies]
# WARNING: gliner and unsloth have incompatible transformers requirements.
# - gliner requires: transformers>=4.38.2,<=4.51.0
# - unsloth requires: transformers>=4.51.3
# These ranges do NOT overlap. Install them in separate virtual environments.
# Use 'pip install -e ".[gliner]"' OR 'pip install -e ".[unsloth]"', not both.
gliner = [
    "gliner==0.2.13",
    "transformers>=4.38.2,<=4.51.0",
    "timm",
]
unsloth = [
    "unsloth==2025.8.9",
    "unsloth-zoo==2025.8.8",
    "trl==0.21.0",
    # transformers>=4.51.3 installed automatically by unsloth
]
ollama = [
    "ollama",
]
dev = [
    "black",
    "isort",
    "flake8",
    "flake8-pyproject",
    "pre-commit",
]
# Separate 'all' extras due to gliner/unsloth incompatibility
all-gliner = [
    "medtermex[gliner,ollama,dev]",
]
all-unsloth = [
    "medtermex[unsloth,ollama,dev]",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
ignore = ["E731", "E501", "W503"]
exclude = [".git", ".github", "data", "docs", "logs", "results",  "models", "results"]
